--- a/readcube_export.bib
+++ b/readcube_export.bib
@@ -1,3 +1,12 @@
+@Tech Report{Jain_Inside_2015,
+author = {Jain, Navendu and Kamara, Seny},
+title = {Attacking Data Center Networks from the Inside},
+year = {2015},
+month = {June},
+abstract = {The ubiquitous growth in the popularity of public cloud computing platforms as seen today entails an inherent risk: the shared nature of  data center networks (DCNs) renders co-hosted tenants susceptible to attacks from within the network. In this paper, we discuss the security mechanisms offered by popular cloud service providers at present, and explore the extent to which existing data center networks might be vulnerable to internal denial-of-service attacks. We describe two categories of attacks: the first comprising those that are easy to mount, but are ill-disguised and conform to traditional attack patterns (overt attacks), and the second comprising hard-to-detect covert attacks that involve a greater complexity of deployment, but also show greater impacts. Finally, we discuss attack-mitigation schemes that employ common network mechanisms, such as TCP pacing and Network Virtualization, and also present a new source-based filtering scheme to regulate network communications.},
+url = {https://www.microsoft.com/en-us/research/publication/attacking-data-center-networks-from-the-inside/},
+}
+
 @INPROCEEDINGS{Li_SACC_2016, 
 author={D. Li and Shuyi Li and Zheng Du}, 
 booktitle={2016 IEEE Symposium on Computers and Communication (ISCC)}, 
@@ -435,16 +444,23 @@ month={May},}
 }
 
 @article{Ren_A_2014,
-  issn={1099-1131},
-  author={Ren, Yongmao and Zhao, Yu and Liu, Pei and Dou, Ke and Li, Jun},
-  pages={1160-1172},
-  volume={27},
-  number={8},
-  doi={10.1002/dac.2402},
-  file={C:\Users\julia\OneDrive\Documents\ReadCube\2014 - Ren - A survey on TCP Incast in data center networks.pdf},
-  journal={Int J Commun Syst},
-  year={2014},
-  title={A survey on {TCP} Incast in data center networks}
+ author = {Ren, Yongmao and Zhao, Yu and Liu, Pei and Dou, Ke and Li, Jun},
+ title = {A Survey on TCP Incast in Data Center Networks},
+ journal = {Int. J. Commun. Syst.},
+ issue_date = {August 2014},
+ volume = {27},
+ number = {8},
+ month = aug,
+ year = {2014},
+ issn = {1074-5351},
+ pages = {1160--1172},
+ numpages = {13},
+ url = {http://dx.doi.org/10.1002/dac.2402},
+ doi = {10.1002/dac.2402},
+ acmid = {2854809},
+ publisher = {John Wiley and Sons Ltd.},
+ address = {Chichester, UK},
+ keywords = {TCP Incast, cloud computing, congestion control, data center networks},
 }
 
 @inproceedings{Benson_Network_2010,
